--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,15 @@ body {
   margin: 0;
   font-family: 'Roboto Condensed Variable', sans-serif;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
