--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-body {
+*,
+html {
   margin: 0;
   font-family: 'Roboto Condensed Variable', sans-serif;
 }
@@ -13,4 +14,29 @@ body {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #d9d9d9;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ec1d24;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #c21d23;
+}
+
+::-webkit-scrollbar:vertical {
+  display: none;
 }
